fixed modal visibiliyt

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -6,7 +6,7 @@
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
-
+  overflow: visible;
 }
 
 nav {
@@ -18,6 +18,7 @@ nav {
 	/*background-color: #FFF7D6;*/
     max-width: 100%;
     /*position: fixed;*/
+   /* overflow: visible;*/
 }
 
 nav h1 {
@@ -50,15 +51,28 @@ nav h1 {
 	overflow: auto;
 	text-align: center;
 	top: 0;
-    bottom:0;
+    /*bottom:0;*/
+    height: 100vh;
     overflow-y:scroll;
     overflow-x:hidden;
-
-
 }
 
 .modal{
 	display: none;
+	/*width: 300px; 
+	border: solid 1px black;
+	
+	background-image: linear-gradient(to bottom right, #006397, #BCD8ED);
+	position: absolute; 
+	z-index: 1; 
+	right: 0;
+	overflow: auto;
+	text-align: center;
+	top: 0;
+   
+    
+    overflow-y:scroll;
+    overflow-x:hidden;*/
 }
 
 /* Modal Content/Box */
